# reform-microsite

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  feed.xml  pyproject.toml
.github/: main.workflow
.github/workflows/: push.yml
ansible/: deploy.sh  reform.yml
ansible-action/: Dockerfile  entrypoint.sh
ansible/inventory/: hosts
ansible/inventory/host_vars/: reform-auto.yml  reform.yml
ansible/reform/tasks/: main.yml
ansible/reform/templates/: nginx.j2
data/: AK.yml  AL.yml  AR.yml  AZ.yml  CA.yml  CO.yml  CT.yml  DE.yml  FL.yml  GA.yml  HI.yml  IA.yml  ID.yml  IL.yml  IN.yml  KS.yml  KY.yml  LA.yml  MA.yml  MD.yml  ME.yml  MI.yml  MN.yml  MO.yml  MS.yml  MT.yml  NC.yml  ND.yml  NE.yml  NH.yml  NJ.yml  NM.yml  NV.yml  NY.yml  OH.yml  OK.yml  OR.yml  PA.yml  RI.yml  SC.yml  (+10 more)
reforms/: admin.py  feed.py  models.py  views.py
reforms/management/commands/: create_yml.py
reforms/migrations/: 0001_initial.py  0002_add_states.py  0003_auto_20190701_1540.py  0004_auto_20190701_1719.py  0005_comment.py  0006_auto_20190701_1930.py  0007_state_latest_test_url.py  0008_state_gov_control.py  0009_state_status.py  0010_auto_20191030_1900.py
static/css/: main.css  stateface.css
templates/: _map.html  base.html  basic_view.html  export.html  index.html  state.html
web/: settings.py  urls.py
