[tool.poetry]
name = "voterroll-geocode"
version = "3.4"
description = ""
authors = ["James Turk <jpturk@princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
us = "^1.0"
whitenoise = "^4.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8"
django-markupfield = "^1.5"
markdown = "^3.1"
flake8 = "^3.7"

[tool.black]
line-length = 88
target_version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | node_modules
  )
)
'''
